--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="footer" style="text-align: center; ">
     <div class=" container">
         <span class="text-muted">All Rights Reserved 2020 (<a style="text-decoration: none;"
-                href="https://www.facebook.com/suresh.prajapati.076">Suresh Prajapati</a>)</span>
+                href="https://github.com/sureshprajapati076">Suresh Prajapati</a>)</span>
     </div>
 
 </footer>
