--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer" style="text-align: center; ">
+<footer class="footer text-center">
     <div class=" container">
         <span class="text-muted">All Rights Reserved 2020 (<a style="text-decoration: none;"
                 href="https://github.com/sureshprajapati076">Suresh Prajapati</a>)</span>
