--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,61 @@
-<p>home works!</p>
+<div>
+    &nbsp;
+</div>
+<div class="container">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img height="300" class="d-block w-100" src="https://www.w3schools.com/bootstrap/la.jpg"
+                    alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img height="300" class="d-block w-100" src="https://www.w3schools.com/bootstrap/chicago.jpg"
+                    alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img height="300" class="d-block w-100" src="https://www.w3schools.com/bootstrap/ny.jpg"
+                    alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <p></p>
+    <p>Welcome to E-Shopping Project by Suresh Prajapati. This is demo project implementing Spring Boot Microservices,
+        running on google cloud. Angular is also deployed on google Cloud Platform. It took around 2 weeks for complete
+        full stack development. (Stay Home Stay Safe)
+    </p>
+    Features: (BackEnd)
+    <ul>
+        <li>Restfull Service running on cloud based on Java.</li>
+        <li>JWT Authentication for Role based authentication.</li>
+        <li>Email Feature for verifying email address (6 digit code verification). This is required if customer wants to
+            make rate, comment or reply
+            on specific product. If you login with oath2 i.e. Login with google no verification required as you are
+            already verifyied.
+        </li>
+        <li>Mongodb for Storing information. (Auto Increment of PrimaryKey implemented manually)</li>
+        <li>Search Feature searches(requires at least 3 characters) word match that is either in name of product or
+            description on product. (Implemented using custom Query)</li>
+        <li>Admin can add products and vendors</li>
+        <li>Password encryped using bycrypt</li>
+    </ul>
+    Features: (FrontEnd)
+    <ul>
+        <li>Angular 8 with Bootstrap 4</li>
+        <li>Login with google feature Oath2.</li>
+        <li>Implemented Http Interceptors, custom pipes, Guard.</li>
+        <li>Get method cached on client side using service for perfomance.</li>
+    </ul>
+</div>
