--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -50,6 +50,7 @@
             description on product. (Implemented using custom Query)</li>
         <li>Admin can add products and vendors</li>
         <li>Password encryped using bycrypt</li>
+        <li>Search By Category will be added soon...</li>
     </ul>
     Features: (FrontEnd)
     <ul>
