--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -49,10 +49,12 @@
             </div>
         </li>
         <li class="nav-item">
-            <a class="nav-link" [routerLink]="['/cart']"><i style="font-size:1.5em;" class="fa fa-shopping-cart"
-                    aria-hidden="true"></i>
-                <span *ngIf="cartItemCount>0" class='badge' id='lblCartCount'> {{cartItemCount}} </span>
-            </a>
+            <div style="width:65px;">
+                <a class="nav-link" [routerLink]="['/cart']"><i style="font-size:1.5em;" class="fa fa-shopping-cart"
+                        aria-hidden="true"></i>
+                    <span *ngIf="cartItemCount>0" class='badge' id='lblCartCount'> {{cartItemCount}} </span>
+                </a>
+            </div>
         </li>
     </ul>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
