--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -45,15 +45,14 @@
         <li>Restfull Service running on cloud based on Java.</li>
         <li>JWT Authentication for Role based authentication.</li>
         <li>Email Feature for verifying email address (6 digit code verification). This is required if customer wants to
-            make rate, comment or reply
-            on specific product. If you login with oath2 i.e. Login with google no verification required as you are
-            already verifyied.
+            rate, comment or reply
+            on specific product. If you login with oath2 i.e. Login with google no verification required.
         </li>
         <li>Mongodb for Storing information. (Auto Increment of PrimaryKey implemented manually)</li>
-        <li>Search Feature searches(requires at least 3 characters) word match that is either in name of product or
+        <li>Search Feature (requires at least 3 characters) matches word that is either in name of product or
             description on product. (Implemented using custom Query)</li>
-        <li>Admin can add products and vendors</li>
-        <li>Password encryped using bycrypt</li>
+        <li>Admin can add products and vendors.</li>
+        <li>Password encryped using bycrypt.</li>
         <li>Search By Category will be added soon...</li>
     </ul>
     Features: (FrontEnd)
@@ -62,7 +61,7 @@
         <li>Login with google feature Oath2.</li>
         <li>Implemented Http Interceptors, custom pipes, Guard.</li>
         <li>Implemented component to component communication using service. (cart subscribes to items in cart)</li>
-        <li>Used debounce time so that we hit server only once when user clicks multiple times in cart items + icon</li>
-        <li>Get method cached on client side using service for perfomance.</li>
+        <li>Used debounce time so that we hit server only once when user clicks multiple times + icon in cart items</li>
+        <li>Get method cached on client side using service for improving perfomance.</li>
     </ul>
 </div>
