--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -7,7 +7,7 @@
 <div class="container">
     <div class="row" *ngIf="list">
         <!-- <div class="item" *ngFor="let product of list | paginate: config; let i=index;"> -->
-        <div class="col-12 col-sm-6 col-md-4" *ngFor="let product of list ">
+        <div class="col-6 col-sm-4" *ngFor="let product of list ">
             <app-productinfo [product]="product"></app-productinfo>
         </div>
 
