--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -35,33 +35,57 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
+
     <p></p>
-    <p>Welcome to E-Shopping Project by Suresh Prajapati. This is demo project implementing Spring Boot Microservices,
-        running on google cloud. Angular is also deployed on google Cloud Platform. It took around 2 weeks for complete
-        full stack development. (Stay Home Stay Safe)
-    </p>
-    Features: (BackEnd)
-    <ul>
-        <li>Restfull Service running on cloud based on Java.</li>
-        <li>JWT Authentication for Role based authentication.</li>
-        <li>Email Feature for verifying email address (6 digit code verification). This is required if customer wants to
-            rate, comment or reply
-            on specific product. If you login with oath2 i.e. Login with google no verification required.
-        </li>
-        <li>Mongodb for Storing information. (Auto Increment of PrimaryKey implemented manually)</li>
-        <li>Search Feature (requires at least 3 characters) matches word that is either in name of product or
-            description on product. (Implemented using custom Query)</li>
-        <li>Admin can add products and vendors.</li>
-        <li>Password encryped using bycrypt.</li>
-        <li>Search By Category will be added soon...</li>
-    </ul>
-    Features: (FrontEnd)
-    <ul>
-        <li>Angular 8 with Bootstrap 4</li>
-        <li>Login with google feature Oath2.</li>
-        <li>Implemented Http Interceptors, custom pipes, Guard.</li>
-        <li>Implemented component to component communication using service. (cart subscribes to items in cart)</li>
-        <li>Used debounce time so that we hit server only once when user clicks multiple times + icon in cart items</li>
-        <li>Get method cached on client side using service for improving perfomance.</li>
-    </ul>
+    <div class="alert alert-dark" role="alert">
+        <h5 class="alert-heading">Welcome to E-shopping Project!</h5>
+        <p>Developer: Suresh Prajapati</p>
+        <p class="text-justify">
+            This is demo project implementing Spring Boot Microservices,
+            running on google cloud. Angular is also deployed on google Cloud Platform. It took around 2 weeks for
+            complete
+            full stack development. (Stay Home Stay Safe)
+        </p>
+
+
+        <p class="font-weight-bold"> Features: (BackEnd)</p>
+        <ul class="text-justify">
+            <li>Restfull Service running on cloud based on Java.</li>
+            <li>JWT Authentication for Role based authentication.</li>
+            <li>Email Feature for verifying email address (6 digit code verification). This is required if customer
+                wants to
+                rate, comment or reply
+                on specific product. If you login with oath2 i.e. Login with google no verification required.
+            </li>
+            <li>Mongodb for Storing information. (Auto Increment of PrimaryKey implemented manually)</li>
+            <li>Search Feature (requires at least 3 characters) matches word that is either in name of product or
+                description on product. (Implemented using custom Query)</li>
+            <li>Admin can add products and vendors.</li>
+            <li>Password encryped using bycrypt.</li>
+            <li>Search By Category will be added soon...</li>
+        </ul>
+        <p class="font-weight-bold"> Features: (FrontEnd)</p>
+        <ul class="text-justify">
+            <li>Angular 8 with Bootstrap 4</li>
+            <li>Login with google feature Oath2.</li>
+            <li>Implemented Http Interceptors, Custom Pipes, Guard.</li>
+            <li>Implemented component to component communication using service. (cart subscribes to items in cart)</li>
+            <li>Used debounce time so that we hit server only once when user clicks multiple times + icon in cart items
+            </li>
+            <li>Get method cached on client side using service for improving perfomance.</li>
+        </ul>
+
+
+
+
+
+
+        <hr>
+        <p class="mb-0">You are always welcome to provide feedback.</p>
+    </div>
+
+
+
+
+
 </div>
