--- a/src/app/components/productdetails/productdetails.component.html
+++ b/src/app/components/productdetails/productdetails.component.html
@@ -45,7 +45,7 @@
 
                                 </div>
                                 <ng-template #showmsgtoverify>
-                                    <span class="alert alert-primary">Please Verify Email First to comment</span> <br />
+                                    <p class="alert alert-primary">Please Verify Email First to comment</p> <br />
                                     <br />
                                     <button class="btn btn-info" (click)="sendCode()">Send Verification
                                         Code</button>
