--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,4 @@
-<div>
-    &nbsp;
-</div>
+<p></p>
 <div class="container">
     <div>
         <a style="text-decoration: none; font-size: 1.5em; " [routerLink]="['/products']"> View All Products</a>
@@ -14,16 +12,31 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img height="300" class="d-block w-100" src="https://www.w3schools.com/bootstrap/la.jpg"
-                    alt="First slide">
+                <div style="background-color: red; height: 300px;">
+
+                    <img height="300" class="d-block w-100" src="https://www.w3schools.com/bootstrap/la.jpg"
+                        alt="First slide">
+
+                </div>
+
             </div>
             <div class="carousel-item">
-                <img height="300" class="d-block w-100" src="https://www.w3schools.com/bootstrap/chicago.jpg"
-                    alt="Second slide">
+                <div style="background-color: red; height: 300px;">
+
+                    <img height="300" class="d-block w-100" src="https://www.w3schools.com/bootstrap/chicago.jpg"
+                        alt="Second slide">
+
+                </div>
+
             </div>
             <div class="carousel-item">
-                <img height="300" class="d-block w-100" src="https://www.w3schools.com/bootstrap/ny.jpg"
-                    alt="Third slide">
+                <div style="background-color: red; height: 300px;">
+
+                    <img height="300" class="d-block w-100" src="https://www.w3schools.com/bootstrap/ny.jpg"
+                        alt="Third slide">
+
+                </div>
+
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
