--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -81,6 +81,7 @@
         <ul class="text-justify">
             <li>Angular 8 with Bootstrap 4</li>
             <li>Login with google feature Oath2.</li>
+            <li>Paypal Integration with Angular </li>
             <li>Implemented Http Interceptors, Custom Pipes, Guard.</li>
             <li>Implemented component to component communication using service. (cart subscribes to items in cart)</li>
             <li>Used debounce time so that we hit server only once when user clicks multiple times + icon in cart items
