--- a/src/app/components/productinfo/productinfo.component.html
+++ b/src/app/components/productinfo/productinfo.component.html
@@ -3,8 +3,7 @@
         <img style="width:200px;height:200px; display: block;
         margin-left: auto;
         margin-right: auto;"
-            src="{{(product.imageUrl!='default.png' && !addedtocart)? product.imageUrl:(!addedtocart)?'./assets/images/noimage.png':'./assets/images/added.gif'}}"
-            alt="">
+            src="{{(product.imageUrl!='default.png')? product.imageUrl:'./assets/images/noimage.png'}}" alt="">
 
     </a>
     <div class="text-center">
