--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,4 @@
 <router-outlet></router-outlet>
 <br /><br />
 
-<app-footer></app-footer>
+<app-footer *ngIf="service.allLoaded===true"></app-footer>
