--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,4 +1,4 @@
-.footer {
+.footer1 {
     position: fixed;
     bottom: 0;
     width:100%;
@@ -6,4 +6,29 @@
     background-color: #222222;
     z-index: 9999;
 }
+
+.footer {
+    position: relative;
+    bottom: 0px;
+    width: 100%;
+    height: 300px;
+    background-color: #222222;
+  
+}
+#map {
+    height: 250px;
+    width: 50%;
+    float: right;
+  }
+
+  @media (max-width: 992px) {
+    #map{
+        width: 75%;
+    }
+  }
+  @media (max-width: 600px) {
+    #map{
+        width: 100%;
+    }
+  }
 	
