--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,5 +3,5 @@
         <span class="text-muted">All Rights Reserved 2020 (<a style="text-decoration: none;"
                 href="https://github.com/sureshprajapati076">Suresh Prajapati</a>)</span>
     </div>
-
+    <div #mapContainer id="map"></div>
 </footer>
