--- a/src/app/components/wishlist/wishlist.component.html
+++ b/src/app/components/wishlist/wishlist.component.html
@@ -53,6 +53,7 @@
 
 
         </table>
+        <div style="height: 350px;"></div>
 
 
     </div>
@@ -72,4 +73,5 @@
 
         </tr>
     </table>
+
 </ng-template>
