--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -18,7 +18,7 @@
 
 
 
-        <div class="text-center" style="width:100%;">
+        <div class="text-center" style="width:100%; height: 100px;">
 
             <hr />
             <button style="width: 100px; height: 40px;" *ngIf="cachedService.currentPage>1"
