--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <app-header></app-header>
 
-<router-outlet></router-outlet>
-<br /><br />
+<div style="min-height: 100vh;">
+    <router-outlet></router-outlet>
+</div>
 
-<app-footer *ngIf="service.allLoaded===true"></app-footer>
+<app-footer></app-footer>
