--- a/src/app/components/productdetails/productdetails.component.html
+++ b/src/app/components/productdetails/productdetails.component.html
@@ -1,12 +1,18 @@
-<div style="width: 80%;margin:0 auto;" *ngIf="product">
+<div style="width: 80%;margin:0 auto;" *ngIf="product!==null">
     <div class="row bootstrap snippets">
         <div class="col-md-12 col-sm-12">
             <div class="comment-wrapper">
                 <div class="card">
                     <div class="card-header h5">
                         <app-productinfo [product]="product"></app-productinfo>
-                        {{product.description}}<br />
-                        {{product.vendor.name}}
+                        {{product.description}}<br /><br />
+                        <p class="text-center">
+
+                            Vendor Details:<br />
+                            {{product.vendor.name}}<br />
+                            {{product.vendor.address}}<br />
+                            {{product.vendor.phone}}
+                        </p>
                     </div>
                     <div *ngIf="loading else loaded" class="text-center">
                         <div>Loading Comments...</div>
