--- a/src/app/components/productinfo/productinfo.component.html
+++ b/src/app/components/productinfo/productinfo.component.html
@@ -1,11 +1,11 @@
 <div>
-    <a [routerLink]="['/productdetails', product.id]">
+    <span style="cursor: pointer;" (click)="showDetails()">
         <img style="width:200px;height:200px; display: block;
         margin-left: auto;
         margin-right: auto;"
             src="{{(product.imageUrl!='default.png')? product.imageUrl:'./assets/images/noimage.png'}}" alt="">
 
-    </a>
+    </span>
     <div class="text-center">
         <div class="adtocart" (click)="addToCart(product.id,product.imageUrl,product.name,product.unitPrice,1)"><i
                 class="fa fa-shopping-cart"></i></div>
