--- a/src/app/components/myorderhistory/myorderhistory.component.html
+++ b/src/app/components/myorderhistory/myorderhistory.component.html
@@ -28,13 +28,15 @@
                         <th>Units</th>
 
                         <tr *ngFor="let product of order.productsOrdered">
-                            <td>
-                                <span style="width: auto;  margin: 5px;">
-                                    <a [routerLink]="['/productdetails',product.productId]"><img width="20" height="20"
-                                            src="{{(product.imageUrl!='default.png')? product.imageUrl:'./assets/images/noimage.png'}}">
-                                    </a>
 
+                            <td>
+
+                                <span style="width: auto;  margin: 5px; cursor: pointer;"
+                                    (click)="showDetails(product.productId)"><img width="30" height="30"
+                                        src="{{(product.imageUrl!='default.png')? product.imageUrl:'./assets/images/noimage.png'}}">
                                 </span>
+
+
                             </td>
                             <td>
                                 {{product.quantity}}
