--- a/src/app/components/wishlist/wishlist.component.html
+++ b/src/app/components/wishlist/wishlist.component.html
@@ -9,10 +9,9 @@
             <th>Sub-Total</th>
             <tr [hidden]="visibleRowIndex[i] == true" *ngFor="let item of cart.saveForLater; let i=index">
 
-                <td><a style="text-decoration: none; color:black" [routerLink]="['/productdetails',item.productId]"><img
-                            height="45" width="45"
+                <td><span style="cursor: pointer;" (click)="showDetails(item.productId)"><img height="45" width="45"
                             src="{{(item.imageUrl!='default.png')? item.imageUrl:'./assets/images/noimage.png'}}">
-                        {{item.name}}</a> </td>
+                        {{item.name}}</span> </td>
                 <td>{{item.unitPrice}}</td>
                 <td>
 
