--- a/src/app/components/userprofile/userprofile.component.html
+++ b/src/app/components/userprofile/userprofile.component.html
@@ -1,6 +1,10 @@
-<button mat-button (click)="closeDialog()" color="warn" class="pull-right" tabIndex=-1>X</button>
-<h1 style="cursor: all-scroll;" mat-dialog-title cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>Update
-    Profile</h1>
+<h1 mat-dialog-title cdkDrag cdkDragRootElement=".cdk-overlay-pane" cdkDragHandle>Update
+    Profile
+
+    <button mat-button (click)="closeDialog()" color="warn" class="pull-right" tabIndex=-1>X</button>
+
+</h1>
+
 
 <form [formGroup]="updateAcc">
 
