--- a/src/app/components/addproduct/addproduct.component.html
+++ b/src/app/components/addproduct/addproduct.component.html
@@ -15,8 +15,9 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="description">Description</label>
-                                    <input id="description" name="description" type="text" class="form-control"
-                                        formControlName="description" required="required">
+                                    <ckeditor id="description" formControlName="description" [editor]="Editor"
+                                        name="description"></ckeditor>
+
                                 </div>
                                 <div class="form-group">
                                     <label for="description">Image Url</label>
